styles.css
a:link{
  color:black;
}
a:visited{
  color:black;
}
a:hover{
  color:black;
}
a:focus{
  color:black;
}
a:active{
  color:black;
}

body{
  overflow-wrap: break-word;
  background-color:#fffcf2;
  margin:0;
  font-family:Arial, Helvetica, sans-serif;
  text-align:center;
}
.Story p{
  overflow-wrap: break-word;
  font-family:Arial, Helvetica, sans-serif;
  text-align: left;
  line-height: 1.5;
}
.Header{
  width:100%;
  height: 5vw;
  background-color:#b8d8a9;
}
.Footer{
  width:100%;
  height: 5vw;
  background-color:#b8d8a9;
}

.nav{
  width:30%;
  margin:auto;
}
h1, h2 {
  font-family: Georgia, 'Times New Roman', Times, serif;
  align-self: center;
}
td {
  text-align: center;
  align-items: center;
  align-self: center;
}
.Main-Table{
  margin-left: auto;
  margin-right: auto;
}
.Inner-Table{
  background-color: #a8cfa5;
}
.Inner-Table td{
  background-color: #eaf3f8;
}
.Dynamic-header {
  width: 100%;
  max-width: 75%;
  height: auto;
}
.Story-header{
  width: 50vw;
  max-width: 75vw;
  height: auto;
}
.Story input{
  width: 100%;
  max-width: 100%;
  height: auto;
}

